Fixed a few things

--- a/ploting_single.ipynb
+++ b/ploting_single.ipynb
@@ -15,7 +15,7 @@
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "\n",
     "import modules.quantizing as quant\n",
-    "from modules.ploting import confusion_matrix_plot"
+    "from modules.ploting import confusion_matrix_plot, build_data"
    ]
   },
   {
@@ -96,23 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse(str_list):\n",
-    "    str_list = ' '.join(str_list.split())\n",
-    "    str_list = str_list.replace(' ', ', ')\n",
-    "    str_list = ast.literal_eval(str_list)\n",
-    "    return str_list\n",
-    "\n",
-    "predictions = pd.read_csv(\n",
-    "    f\"predictions/{folder_name}/{DIM}/predictions.csv\",\n",
-    "    sep='\\t'\n",
-    "    )\n",
-    "\n",
-    "predictions[DIM] = predictions[DIM].map(\n",
-    "    lambda v: parse(v)\n",
-    ")\n",
-    "predictions[\"prediction\"] = predictions[\"prediction\"].map(\n",
-    "    lambda v: parse(v)\n",
-    ")"
+    "predictions = build_data(folder_name, DIM)"
    ]
   },
   {
@@ -173,7 +157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -187,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
